--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/rael1411/SardiniaCaseus2#readme",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "gh-pages": "^3.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
